--- a/xqrcode_test/build.gradle
+++ b/xqrcode_test/build.gradle
@@ -14,6 +14,15 @@ android {
 
     }
 
+    signingConfigs {
+        release {
+            storeFile file(app_release.storeFile)
+            storePassword app_release.storePassword
+            keyAlias app_release.keyAlias
+            keyPassword app_release.keyPassword
+        }
+    }
+
     buildTypes {
         debug {
             minifyEnabled false
@@ -22,7 +31,8 @@ android {
         }
 
         release {
-            minifyEnabled true
+            minifyEnabled false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             proguardFile 'proguard-phantom.pro'
         }
