--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,15 +38,8 @@ android {
     }
 
     applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            output.outputFile = new File(output.outputFile.parent,
-                    "${variant.applicationId}_${variant.versionName}.apk")
-
-            if (output.zipAlign != null) {
-                output.zipAlign.doLast {
-                    output.zipAlign.inputFile.delete()
-                }
-            }
+        variant.outputs.all { output ->
+            outputFileName = "${variant.applicationId}_${variant.versionName}.apk"
         }
     }
 
@@ -57,10 +50,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:28.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    compile 'com.wlqq.phantom:phantom-host-lib:3.0.0'
-
-    compile 'com.github.xuexiangjys.XUtil:xutil-core:1.1.5'
+    implementation 'com.wlqq.phantom:phantom-host-lib:3.1.3'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.6'
 }
