--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
     addRepos(repositories) //增加代码仓库
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath "com.android.tools.build:gradle:3.1.4"
         classpath deps.android_maven_gradle_plugin
 
-        classpath 'com.wlqq.phantom:phantom-host-gradle:3.0.0'
-        classpath 'com.wlqq.phantom:phantom-plugin-gradle:3.0.0'
+        classpath 'com.wlqq.phantom:phantom-host-gradle:3.1.2'
+        classpath 'com.wlqq.phantom:phantom-gradle-plugin:3.1.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
