--- a/xqrcode-lib/build.gradle
+++ b/xqrcode-lib/build.gradle
@@ -15,9 +15,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.google.zxing:core:3.3.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    compileOnly 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.zxing:core:3.3.3'
 }
 
 
